--- a/.tigrc
+++ b/.tigrc
@@ -1,3 +1,4 @@
-bind refs       M       ?sh -c 'git checkout master && git merge %(branch) && git branch -D %(branch)'
-bind refs       !       !git branch -D %(branch)
-bind refs	x	!sh -c 'git push --delete origin %(branch) && git remote update --prune'
+bind refs       <Esc>m	?sh -c 'git checkout master && git merge %(branch) && git branch -D %(branch)'
+bind refs       <Esc>d	?git branch -D %(branch)
+bind refs	<Esc>D	!sh -c 'git push --delete origin %(branch) && git remote update --prune'
+bind refs	<Esc>r	!blogtool -v refresh %(branch)
